--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,12 +1,5 @@
 /* write your override styles here */
-/*#wall div{
+#wall div{
   display: none;
-}*/
 
-wall .tag-1{
-  display: none;
-}
 
-#wall #tag-2{
-  display:none;
-}
