--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,19 +1,4 @@
 /* write your override styles here */
-/*#wall div{
-  display: none;
-}
-
-#tag-3{
-  display: none;
-}
-
-.parent div[id="tag-4"]
-}
-*/
-#wall .tag-1{
-  display: none;
-}
-
-div #wall #tag-2 {
+#wall div{
   display: none;
 }
