--- a/css/paint.css
+++ b/css/paint.css
@@ -33,13 +33,13 @@ body {
 #wall #tag-2 {
   background: url(../images/tag-2.png) no-repeat;
   z-index: 6;
-  display: none;
+  display: block;
 }
 
 div#wall #tag-3.slick {
   background: url(../images/tag-3.png) no-repeat;
   z-index: 5;
-  display: none;
+  display: block;
 }
 
 #wall #tag-4 {
@@ -51,13 +51,13 @@ div#wall #tag-3.slick {
 div#wall .parent #tag-5.slick {
   background: url(../images/tag-5.png) no-repeat;
   z-index: 3;
-  display: none;
+  display: block;
 }
 
 div#wall div.parent div:last-child div#tag-6 {
   background: url(../images/tag-6.png) no-repeat;
   z-index: 2;
-  display: none;
+  display: block;
 }
 
 body div#wall div.parent div > #tag-7.slick {
